<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#938F46"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00BCD4"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200sp"
            android:text="@string/one_hand"
            android:textSize="48sp" />

        <Button
            android:id="@+id/buttonstart"
            android:layout_width="170sp"
            android:layout_height="80sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:text="@string/buttonstart"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:text="@string/bots"
            android:textSize="48sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Normal"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/Normal" />

            <Button
                android:id="@+id/Hard"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:text="@string/hard" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>