<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Aboard">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:background="#03A9F4"
            android:orientation="horizontal">


            <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/vihod" />

            <Button
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/menu" />

            <Button
                android:id="@+id/newGame"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/Newgame" />

            <Button
                android:id="@+id/inform"
                android:layout_width="73dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/info" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/createbut"
                android:layout_width="180dp"
                android:layout_height="119dp"
                android:layout_gravity="center"
                android:text="@string/createbut" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#03A9F4">


            </androidx.gridlayout.widget.GridLayout>
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>